--- a/styles.css/index.css
+++ b/styles.css/index.css
@@ -5,43 +5,35 @@
     font-size: 16px;
     line-height: 1.5em;
     cursor: pointer; 
+    color: #FFFFFF;
 }
 .header{
 display: flex;
 background: #FFFFFF;
 }
-.logo-web{
+.logo{
     font-family: 'Raleway';
-    font-style: normal;
     font-weight: 800;
     font-size: 18px;
-    line-height: 21px;
-    color: #4D5AE5;
+    line-height: 133%;
     text-transform: uppercase;
+    letter-spacing: 0.03em;
 }
+.logo-web{
+    color: #4D5AE5;
+    }
 .logo-studio-two{
-    font-family: 'Raleway';
-    font-style: normal;
-    font-weight: 800;
-    font-size: 18px;
-    line-height: 21px;
-    text-transform: uppercase;
     color: #F4F4FD;
 }
 .logo-studio-one{
-font-family: 'Raleway';
-font-style: normal;
-font-weight: 800;
-font-size: 18px;
-line-height: 24px;
-text-transform: uppercase;
 color: #2E2F42;}
 .nav-list{
     font-family: 'Roboto';
-    font-style: normal;
     font-weight: 500;
     font-size: 16px;
     color: #2E2F42;
+    letter-spacing: 0.02em;
+    line-height: 150%;
 }
 .adress-list{
     font-family: 'Roboto';
@@ -49,7 +41,9 @@ color: #2E2F42;}
     font-weight: 400;
     font-size: 16px;
     color: #434455;
-    
+    letter-spacing: 0.02em;
+    line-height: 150%;
+ 
 }
 .section-one{
 background: #2E2F42;
@@ -57,70 +51,65 @@ background: #2E2F42;
 .h-one{
     font-family: 'Roboto';
     font-style: normal;
-    font-weight: 700;
+    letter-spacing: 0.02em;
     font-size: 56px;
     line-height: 60px;
     color: #FFFFFF;
+    line-height: 107%;
 }
 .button-text{
 font-family: 'Roboto';
 font-style: normal;
 font-weight: 500;
 color: #FFFFFF;
+letter-spacing: 0.04em;
+background-color: #4D5AE5;
+line-height: 150%;
 }
-.button{
-background: #4D5AE5;
-}
-.button:hover,
-.button:focus{
+
+.button-text:hover,
+.button-text:focus{
     background-color: #4D5AE5;
 }
 
 .section-two{
-font-family: 'Roboto';
-font-style: normal;
 color: #434455;
 }
 .title-three{
-font-family: 'Roboto';
-font-style: normal;
 font-weight: 500;
 font-size: 20px;
-line-height: 24px;
+line-height: 120%;
 color: #2E2F42;
+letter-spacing: 0.02em;
 }
 .section-three-title-two{
-font-family: 'Roboto';
-font-style: normal;
 font-weight: 700;
 font-size: 36px;
-line-height: 40px;
+line-height: 111%;
 color: #2E2F42;
+letter-spacing: 0.02em;
 }
 .section-four{
-background: #F4F4FD;
-font-family: 'Roboto';
-font-style: normal;
+background-color: #F4F4FD;
 color: #434455;
 }
 .section-four-title-two{
-font-family: 'Roboto';
-font-style: normal;
 font-weight: 700;
 font-size: 36px;
-line-height: 40px;
+line-height: 111%;
 color: #2E2F42;
+letter-spacing: 0.02em;
 }
 .section-four-title-three{
-font-family: 'Roboto';
-font-style: normal;
 font-weight: 500;
 font-size: 20px;
 color: #2E2F42;
+letter-spacing: 0.02em;
+line-height: 120%;
 }
 .footer{
-background: #2E2F42;
-font-family: 'Roboto';
-font-style: normal;
+background-color: #2E2F42;
 color: #E7E9FC;
+letter-spacing: 0.02em;
+line-height: 150%;
 }
