--- a/styles.css/index.css
+++ b/styles.css/index.css
@@ -35,6 +35,42 @@ color: #2E2F42;}
     letter-spacing: 0.02em;
     line-height: 150%;
 }
+.portfolio{
+    font-family: 'Roboto';
+    font-weight: 500;
+    font-size: 16px;
+    color: #2E2F42;
+    letter-spacing: 0.02em;
+    line-height: 150%;  
+}
+.portfolio:focus,
+.portfolio:hover{
+    color: #404BBF;
+}
+.studio{
+    font-family: 'Roboto';
+    font-weight: 500;
+    font-size: 16px;
+    color: #2E2F42;
+    letter-spacing: 0.02em;
+    line-height: 150%;
+}
+.studio:focus,
+.studio:hover{
+    color: #404BBF;
+}
+.contacts{
+    font-family: 'Roboto';
+    font-weight: 500;
+    font-size: 16px;
+    color: #2E2F42;
+    letter-spacing: 0.02em;
+    line-height: 150%;
+}
+.contacts:focus,
+.contacts:hover{
+    color: #404BBF;
+}
 .adress-list{
     font-family: 'Roboto';
     font-style: normal;
@@ -43,7 +79,32 @@ color: #2E2F42;}
     color: #434455;
     letter-spacing: 0.02em;
     line-height: 150%;
- 
+}
+.email{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    color: #434455;
+    letter-spacing: 0.02em;
+    line-height: 150%;
+}
+.phone{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    color: #434455;
+    letter-spacing: 0.02em;
+    line-height: 150%;
+}
+.email:focus,
+.email:hover{
+    color: #404BBF;
+}
+.phone:focus,
+.email:hover{
+    color: #404BBF;
 }
 .section-one{
 background: #2E2F42;
@@ -65,11 +126,12 @@ color: #FFFFFF;
 letter-spacing: 0.04em;
 background-color: #4D5AE5;
 line-height: 150%;
+cursor: pointer;
 }
 
 .button-text:hover,
 .button-text:focus{
-    background-color: #4D5AE5;
+    background-color: #404BBF;;
 }
 
 .section-two{
