--- a/styles.css/index.css
+++ b/styles.css/index.css
@@ -1,10 +1,7 @@
-.body{
+body{
     font-family: 'Roboto', sans-serif ;
-    font-style: normal;
-    font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
-    cursor: pointer; 
     background-color: #FFFFFF;
     color: #434455;;
     text-decoration: none;
@@ -13,12 +10,16 @@
 ul{
     list-style: none;
 }
+:root{
+    --brand-color: #434455;
+    --background-brand: #FFFFFF; 
+}
 .header{
 
 background: #FFFFFF;
 }
 .logo{
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif ;
     font-weight: 800;
     font-size: 18px;
     line-height: 1.33;
@@ -34,7 +35,7 @@ background: #FFFFFF;
 }
 .logo-studio-one{
     color: #2E2F42;}
-.nav-list{
+.nav{
     font-weight: 500;
     font-size: 16px;
     color: #2E2F42;
@@ -43,7 +44,7 @@ background: #FFFFFF;
     text-decoration: none;
     list-style: none;
 }
-.portfolio{
+.nav-list{
     font-weight: 500;
     font-size: 16px;
     color: #2E2F42;
@@ -52,39 +53,11 @@ background: #FFFFFF;
     text-decoration: none;
     list-style: none;
 }
-.portfolio:focus,
-.portfolio:hover{
-    color: #404BBF;
-}
-.studio{
-    font-weight: 500;
-    font-size: 16px;
-    color: #2E2F42;
-    letter-spacing: 0.02em;
-    line-height: 1.5;
-    text-decoration: none;
-    list-style: none;
-}
-.studio:focus,
-.studio:hover{
-    color: #404BBF;
-}
-.contacts{
-    font-weight: 500;
-    font-size: 16px;
-    color: #2E2F42;
-    letter-spacing: 0.02em;
-    line-height: 1.5;
-    text-decoration: none;
-    list-style: none;
-}
-.contacts:focus,
-.contacts:hover{
+.nav-list:focus,
+.nav-list:hover{
     color: #404BBF;
 }
 .adress-list{
-    font-style: normal;
-    font-weight: 400;
     font-size: 16px;
     color: #434455;
     letter-spacing: 0.02em;
@@ -92,9 +65,7 @@ background: #FFFFFF;
     text-decoration: none;
     list-style: none;
 }
-.email{
-    font-style: normal;
-    font-weight: 400;
+.contact-list{
     font-size: 16px;
     color: #434455;
     text-decoration: none;
@@ -103,49 +74,29 @@ background: #FFFFFF;
     list-style: none;
 
 }
-.phone{
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    color: #434455;
-    letter-spacing: 0.02em;
-    line-height: 1.5;
-    text-decoration: none;
-    list-style: none;
-}
-.email:focus,
-.email:hover{
-    color: #404BBF;
-}
-.phone:focus,
-.email:hover{
+.contact-list:focus,
+.contact-list:hover{
     color: #404BBF;
 }
 .section-one{
 background: #2E2F42;
 }
 .h-one{
-    font-style: normal;
     letter-spacing: 0.02em;
     font-size: 56px;
-    line-height: 60px;
+    line-height: 1.07;
     color: #FFFFFF;
     line-height: 1.07;
 }
 .button-text{
-font-family: 'Roboto';
-font-style: normal;
-color: #FFFFFF;
-background-color: #4D5AE5;
-cursor: pointer;
-display: flex;
-flex-direction: row;
-align-items: flex-start;
-padding: 16px 32px;
-gap: 10px;
-font-weight: 500;
-letter-spacing: 0.04em;
-line-height: 1.5;
+    font-family: 'Roboto', sans-serif ;
+    color: #FFFFFF;
+    background-color: #4D5AE5;
+    cursor: pointer;
+    padding: 16px 32px;
+    font-weight: 500;
+    letter-spacing: 0.04em;
+    line-height: 1.5;
 }
 
 .button-text:hover,
@@ -154,29 +105,28 @@ line-height: 1.5;
 }
 
 .section-two{
-color: #434455;
+    color: #434455;
 }
 .title-three{
-font-weight: 500;
-font-size: 20px;
-line-height: 1.2;
-color: #2E2F42;
-letter-spacing: 0.02em;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    color: #2E2F42;
+    letter-spacing: 0.02em;
 }
 .section-two-text{
     color: #434455;
 
 }
 .section-three-title-two{
-font-weight: 700;
-font-size: 36px;
-line-height: 1.11;
-color: #2E2F42;
-letter-spacing: 0.02em;
+    font-size: 36px;
+    line-height: 1.11;
+    color: #2E2F42;
+    letter-spacing: 0.02em;
 }
 .section-four{
-background-color: #F4F4FD;
-color: #434455;
+    background-color: #F4F4FD;
+    color: #434455;
 }
 .tom{
     background: #FFFFFF;
@@ -191,22 +141,21 @@ color: #434455;
     background: #FFFFFF;
 }
 .section-four-title-two{
-font-weight: 700;
-font-size: 36px;
-line-height: 1.11;
-color: #2E2F42;
-letter-spacing: 0.02em;
+    font-size: 36px;
+    line-height: 1.11;
+    color: #2E2F42;
+    letter-spacing: 0.02em;
 }
 .section-four-title-three{
-font-weight: 500;
-font-size: 20px;
-color: #2E2F42;
-letter-spacing: 0.02em;
-line-height: 1.2;
+    font-weight: 500;
+    font-size: 20px;
+    color: #2E2F42;
+    letter-spacing: 0.02em;
+    line-height: 1.2;
 }
 .footer{
-background-color: #2E2F42;
-color: #E7E9FC;
-letter-spacing: 0.02em;
-line-height: 1.5;
+    background-color: #2E2F42;
+    color: #E7E9FC;
+    letter-spacing: 0.02em;
+    line-height: 1.5;
 }
