--- a/styles.css/index.css
+++ b/styles.css/index.css
@@ -13,6 +13,11 @@ ul{
 :root{
     --brand-color: #434455;
     --background-brand: #FFFFFF; 
+    --logo-color-web :#4D5AE5; 
+    --logo-color-studio-two: #F4F4FD;
+    --logo-color-studio-one: #2E2F42;
+    --footer-color: #E7E9FC;
+    --nav-list-header-color: #2E2F42;
 }
 .header{
 
@@ -97,6 +102,7 @@ background: #2E2F42;
     font-weight: 500;
     letter-spacing: 0.04em;
     line-height: 1.5;
+    font-size: 16px;
 }
 
 .button-text:hover,
